Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57933

[REG Qt 4 -> Qt 5] It's not possible to use a keyboard shortcut in a Qt app that coincides with a 'dead' key on the current keyboard layout, even outside of a text input context (OS X)

    XMLWordPrintable

Details

    • macOS
    • 202d3ba3e6c9982608f41f5e7d836825c8664c93

    Description

      STEPS TO REPRODUCE
      1. Build and run the attached application on the Mac.
      2. Ensure the 'Application Output' tab is visible in Qt Creator.
      3. Open the 'Menu' menu and observe there are two shortcuts registered.
      4. Press Alt-W.

      EXPECTED: The command runs and outputs "QKeySequence("Alt+W")".
      ACTUAL: As expected.

      5. Press Alt-E.

      EXPECTED: The command runs and outputs "QKeySequence("Alt+E")".
      ACTUAL: Nothing happens.

      The same thing happens for any 'dead' key, that is a key that gives a combining character during text input. I could understand that these keys may be unavailable for use as shortcuts if there is a text input context active, such as a QLineEdit, but surely if there is no active text input, they should work as normal shortcuts? This seems to be the behaviour in other Mac applications; I tried creating an Alt-E shortcut in Xcode, for example, and it worked fine, even with the caret in the text editor.

      This is a major problem in our application as it greatly limits the available keyboard shortcuts, particularly with non-English keyboard layouts.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            jlarcombe James Larcombe
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes